--- a/style.css
+++ b/style.css
@@ -130,13 +130,19 @@ header {
     flex-direction: row;
 }
 
-.column {
-    flex: 58%;
+.column1 {
+    flex: 40%;
+    display: justify;
+}
+
+.column2 {
+    flex: 60%;
     display: justify;
 }
 
 #hero {
     padding: 0 6%;
+    margin-top: 1rem;
 }
 
 #hero .head_line {
@@ -179,16 +185,17 @@ header {
 /* subscriber board*/
 
 .hero {
-    align-items: center;
+    margin-top: 2rem;
+    justify-content: space-between;
 }
 
 .card {
     width: 90%;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
     background-color: #E9E6DE;
-    padding: 40px;
+    padding: 44px;
     border-radius: 10px;
 }
 
@@ -208,9 +215,9 @@ header {
 
 @media (max-width: 992px) {
     .card {
-        width: 110%;
+        width: 100%;
         margin-top: 10px;
-        padding: 40px 30px;
+        padding: 40px 40px;
         align-items: left;
     }
 
@@ -233,3 +240,36 @@ header {
         order: 2;
     }
 }
+
+/*contact us*/
+
+.contact_us{
+    margin-top: 20px;
+    padding: 35px 30px;
+}
+
+input[type=text],
+input[type=email]{
+    width: 100%;
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    box-sizing: border-box;
+    margin-top: 6px;
+    margin-bottom: 16px;
+    resize: vertical;
+    font-size: 16px;
+  }
+  
+  input[type=submit] {
+    width:100%;
+    background-color: #133A73;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 16px;
+    box-shadow: 0 8px 10px 0 #133A73;
+  }
+  
