--- a/style.css
+++ b/style.css
@@ -378,3 +378,76 @@ input[type=submit] {
         order: 3;
     }
 }
+
+/*services*/
+#services {
+    margin-top: 50px;
+    padding: 0 6%;
+}
+
+#services .head_line {
+    color: #133A73;
+    font-size: 85px;
+    width: 100%;
+}
+
+.card2 {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    padding: 20px;
+    border-radius: 10px;
+}
+
+.card-item {
+    display: justify;
+    text-align: left;
+    background-color: #E9E6DE;
+    border-radius: 10px;
+}
+
+.card-item img {
+    padding: 10px;
+}
+
+.service_para {
+    font-size: 24px;
+    color: #133A73;
+    margin: 0;
+}
+
+.card-item_dis p{
+    font-size: 21px;
+}
+
+.card-item_dis {
+    padding: 10px;
+    margin: 10px;
+    border-radius: 10px;
+    background-color: white;
+}
+
+@media (max-width: 992px){
+    .card2{
+        flex-direction: column;
+    }
+
+    .card-item{
+        margin:0 20px;
+        font-size: 15px;
+    }
+
+    #sevices{
+        padding: 1% 1%;
+    }
+
+    #services .head_line{
+        font-size: 25px;
+    }
+
+    .service_para{
+        font-size: 15px;
+        font-weight: 600;
+    }
+}
