--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
     font-family: 'Hauora';
 }
 
-body{
+body {
     overflow-x: hidden;
 }
 
@@ -252,8 +252,8 @@ header {
     padding: 35px 30px;
 }
 
-input[type=text],
-input[type=email] {
+.contact_us input[type=text],
+.contact_us input[type=email] {
     width: 100%;
     padding: 12px;
     border: 1px solid #ccc;
@@ -265,7 +265,7 @@ input[type=email] {
     font-size: 16px;
 }
 
-input[type=submit] {
+.contact_us input[type=submit] {
     width: 100%;
     background-color: #133A73;
     color: white;
@@ -297,7 +297,7 @@ input[type=submit] {
 
 @media (max-width: 992px) {
     #m_insurance .head_line {
-        font-size: 25px;
+        font-size: 30px;
         font-weight: bold;
     }
 
@@ -359,7 +359,7 @@ input[type=submit] {
         position: static;
         color: #133A73;
         padding: 1% 1%;
-        font-size: 25px;
+        font-size: 30px;
         width: 100%;
     }
 
@@ -421,7 +421,7 @@ input[type=submit] {
     margin: 0;
 }
 
-.card-item_dis p{
+.card-item_dis p {
     font-size: 21px;
 }
 
@@ -432,49 +432,50 @@ input[type=submit] {
     background-color: white;
 }
 
-@media (max-width: 992px){
-    .card2{
+@media (max-width: 992px) {
+    .card2 {
         flex-direction: column;
     }
 
-    .card-item{
-        margin:0 20px;
+    .card-item {
+        margin: 0 20px;
         font-size: 15px;
     }
 
-    #sevices{
+    #sevices {
         padding: 1% 1%;
     }
 
-    #services .head_line{
-        font-size: 25px;
+    #services .head_line {
+        font-size: 30px;
+        margin-bottom: 20px;
     }
 
-    .service_para{
+    .service_para {
         font-size: 15px;
         font-weight: 600;
     }
 }
 
 /*reviews*/
-#reviews{
+#reviews {
     margin-top: 5rem;
 }
 
-#reviews .head_line{
+#reviews .head_line {
     padding: 0 5rem;
     color: #133A73;
     font-size: 97px;
     width: 100%;
 }
 
-.reviews_p{
+.reviews_p {
     justify-content: center;
     align-items: center;
     margin-top: 5rem;
 }
 
-.p_detail{
+.p_detail {
     margin: 1rem 5rem;
     padding: 0.5rem 4rem;
     background-color: #E9E6DE;
@@ -483,13 +484,13 @@ input[type=submit] {
     align-items: center;
 }
 
-.seprator{
+.seprator {
     justify-content: space-between;
     align-items: center;
     padding: 0 17rem;
 }
 
-.g_review{
+.g_review {
     margin-right: 4rem;
     width: 100%;
     border-radius: 10px;
@@ -497,33 +498,135 @@ input[type=submit] {
     background-color: #E9E6DE;
 }
 
-.column5{
+.column5 {
     flex: 40%;
     display: justify;
 }
 
-.column6{
+.column6 {
     margin-right: 5rem;
     flex: 60%;
     display: justify;
 }
 
-@media(max-width: 992px){
-    #reviews .head_line{
-        font-size: 25px;
+@media(max-width: 992px) {
+    #reviews .head_line {
+        font-size: 30px;
         padding: 0 2rem;
         font-weight: bold;
     }
-    #reviews{
+
+    #reviews {
         overflow-x: hidden;
     }
-    .g_review{
+
+    .g_review {
         margin-left: 1rem;
+        padding: 3%;
     }
-    .column6{
+
+    .column6 {
         margin: 0 2rem 0 0;
     }
-    .column5{
-        
+}
+
+/*be a part*/
+#help_desk {
+    margin: 4rem;
+}
+
+#help_desk .head_line {
+    text-align: center;
+    color: #133A73;
+    font-size: 97px;
+    width: 100%;
+}
+
+#help_desk h1 {
+    margin: 3rem 0;
+    text-align: center;
+    font-size: 30px;
+}
+
+.contact_form {
+    background-color: #133A73;
+    margin-top: 20px;
+    margin-left: 14rem;
+    margin-right: 14rem;
+    border-radius: 10px;
+    padding: 35px 30px;
+}
+
+.contact_form input[type=text],
+.contact_form input[type=email] {
+    width: 40%;
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    box-sizing: border-box;
+    margin-top: 6px;
+    margin-bottom: 16px;
+    margin-left: 45px;
+    resize: vertical;
+    font-size: 16px;
+}
+
+.contact_form input[type=submit] {
+    width: 50%;
+    background-color: #E9E6DE;
+    color: #133A73;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 16px;
+    box-shadow: 0 8px 10px 0 #133A73;
+    margin-left: 11rem;
+}
+
+@media(max-width: 992px){
+    #help_desk{
+        margin: 1rem;
+    }
+    #help_desk .head_line {
+        text-align: left;
+        font-size: 32px;
+        font-weight: bold;
+        margin-top: 4rem;
+    }
+    #help_desk h1 {
+        margin: 1rem 0;
+        text-align: left;
+        font-size: 20px;
+    }
+    .contact_form {
+        width: 100%;
+        background-color: #133A73;
+        border-radius: 10px;
+        margin: 0;
+        margin-top: 4rem;
+    }
+    
+    .contact_form input[type=text],
+    .contact_form input[type=email] {
+        width: 100%;
+        border: 1px solid #ccc;
+        border-radius: 10px;
+        box-sizing: border-box;
+        resize: vertical;
+        font-size: 16px;
+        margin-left: 0;        
+    }
+    
+    .contact_form input[type=submit] {
+        width: 100%;
+        background-color: #E9E6DE;
+        color: #133A73;
+        border: none;
+        border-radius: 4px;
+        cursor: pointer;
+        font-size: 16px;
+        box-shadow: 0 8px 10px 0 #133A73;
+        margin-left: 0;
     }
 }
