--- a/style.css
+++ b/style.css
@@ -680,3 +680,106 @@ header {
         margin-left: 0;
     }
 }
+
+/*footer*/
+
+.footer {
+    background-color: #E9E6DE;
+    padding: 4rem 4rem 4rem 4rem;
+    margin: 2rem 4.8rem 2rem 4.8rem;
+    border-radius: 10px;
+}
+
+.f_links {
+    background-color: #D9D9D9;
+    padding: 20px;
+    border-radius: 10px;
+    line-height: 30px;
+    width: 200px;
+}
+
+.f_links ul {
+    list-style-type: none;
+    font-size: 14px;
+    font-weight: 200;
+}
+
+.f_links a {
+    text-decoration: none;
+    color: #000;
+}
+
+.top_row {
+    display: flex;
+    justify-content: space-between;
+}
+
+.fb_links {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    background-color: #D9D9D9;
+    padding: 2rem;
+    width: 61%;
+    border-radius: 10px;
+    font-size: 14px;
+    font-weight: 200;
+    line-height: 30px;
+}
+
+.bottom_row {
+    padding-top: 3.5rem;
+    justify-content: space-between;
+}
+
+.bottom_row a {
+    text-decoration: none;
+    color: #000;
+}
+
+.fb_disc,
+.fb_seprator {
+    display: none;
+}
+
+.responsive{
+    display: none;
+}
+
+@media(max-width: 992px) {
+    .footer {
+        margin: 1rem;
+    }
+
+    .f_links {
+        margin-top: 20px;
+        width: 90%;
+    }
+
+    .fb_links {
+        margin-top: 20px;
+        flex-direction: column;
+        width: 90%;
+    }
+
+    .fb_disc,
+    .fb_seprator {
+        display: inline;
+    }
+
+    .bottom_row {
+        padding-top: 0;
+    }
+
+    .bottom_row p{
+        font-size: 12px;
+    }
+
+    .non_responsive{
+        display: none;
+    }
+
+    .responsive{
+        display: inline;
+    }
+}
