--- a/style.css
+++ b/style.css
@@ -461,8 +461,9 @@ header {
     }
 
     .card-item {
-        margin: 0 40px;
+        margin: 0 20px;
         font-size: 15px;
+        padding: 0 20px;
     }
 
     #sevices {
