--- a/style.css
+++ b/style.css
@@ -547,7 +547,7 @@ header {
     }
 
     .p_detail {
-        margin: 10rem;
+        margin: 1rem 9rem;
         padding: 0.5rem 4rem;
         justify-content: center;
     }
