--- a/style.css
+++ b/style.css
@@ -549,7 +549,7 @@ header {
     .p_detail {
         margin: 1rem 9rem;
         padding: 0.5rem 0.4rem;
-        justify-content: center;
+        justify-content: space-between;
     }
 
     .g_review {
