--- a/style.css
+++ b/style.css
@@ -797,60 +797,103 @@ header {
     }
 }
 
-.testmonials{
+.testmonials {
     padding: 40px 0;
     background: #133A73;
     color: #000;
     text-align: center;
 }
 
-.inner{
+.inner {
     max-width: 1200px;
     margin: auto;
     overflow: hidden;
     padding: 0 20px;
 }
 
-.t_row{
+.t_row {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
 }
 
-.t_col{
+.t_col {
     flex: 33.33%;
     max-width: 33.33%;
     box-sizing: border-box;
     padding: 15px;
 }
 
-.testmonial{
+.testmonial {
     background: #D9D9D9;
     padding: 30px;
 }
 
-.testmonial img{
+.testmonial img {
     width: 100px;
     height: 100px;
     border-radius: 50%;
 }
 
-.name{
+.name {
     font-size: 20px;
     text-transform: uppercase;
     margin: 20px 0;
 }
 
 @media screen and(max-width:992px) {
-    .t_col{
+    .t_col {
         flex: 100%;
         max-width: 80%;
     }
 }
 
 @media screen and (max-width: 600px) {
-    .t_col{
+    .t_col {
         flex: 100%;
         max-width: 100%;
     }
+}
+
+.container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    background-color: #fff;
+}
+
+.form-container {
+    width: 300px;
+    background-color: #D9D9D9;
+    padding: 20px;
+    border-radius: 5px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+}
+
+.form h2 {
+    margin-bottom: 20px;
+    text-align: center;
+}
+
+.form input {
+    width: 100%;
+    margin-bottom: 10px;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 3px;
+}
+
+.form button {
+    width: 100%;
+    padding: 10px;
+    background-color: #133A73;
+    color: #fff;
+    border: none;
+    border-radius: 3px;
+    cursor: pointer;
+}
+
+.form button:hover {
+    background-color: #45a049;
 }
