--- a/style.css
+++ b/style.css
@@ -156,6 +156,7 @@ header {
 #hero .head_line {
     color: #133A73;
     padding: 0 1%;
+    line-height: 100px;
     font-size: 90px;
 }
 
@@ -309,6 +310,7 @@ header {
     color: #133A73;
     padding: 0 1%;
     font-size: 85px;
+    line-height: 100px;
     text-align: right;
 }
 
@@ -491,6 +493,7 @@ header {
     padding: 0 5rem;
     color: #133A73;
     font-size: 97px;
+    line-height: 100px;
     width: 100%;
 }
 
@@ -574,6 +577,7 @@ header {
     text-align: center;
     color: #133A73;
     font-size: 80px;
+    line-height: 100px;
     width: 100%;
 }
 
