--- a/style.css
+++ b/style.css
@@ -497,64 +497,157 @@ header {
     width: 100%;
 }
 
-.testmonials {
-    padding: 40px 0;
-    background: #133A73;
-    color: #000;
-    text-align: center;
-}
-
-.inner {
-    max-width: 1200px;
-    margin: auto;
-    overflow: hidden;
-    padding: 0 20px;
-}
-
-.t_row {
+.row {
     display: flex;
-    flex-wrap: wrap;
+    flex-direction: row;
+}
+
+.column5 {
+    display: flex;
+    flex: 40%;
+    flex-direction: column;
+}
+
+.p-slides {
+    display: flex;
+    flex: 40%;
+    flex-direction: column;
+}
+
+.column5 a {
+    text-decoration: none;
+    color: #000;
+}
+
+.column6 {
+    flex: 60%;
+}
+
+.p-details {
+    display: flex;
+    line-height: 10px;
+    justify-content: space-around;
+    align-items: center;
+    flex-direction: row;
+    border-radius: 10px;
+    margin: 20px 40px;
+    padding: 10px 0;
+    background-color: #d9d9d9;
+}
+
+.slides {
+    display: flex;
+    overflow-x: auto;
+    scroll-snap-type: x mandatory;
+    height: 400px;
+    scroll-behavior: smooth;
+    -webkit-overflow-scrolling: touch;
+}
+
+.slides::-webkit-scrollbar {
+    width: 10px;
+    height: 10px;
+}
+
+.slides::-webkit-scrollbar-thumb {
+    background: #fff;
+    border-radius: 10px;
+}
+
+.slides::-webkit-scrollbar-track {
+    background: transparent;
+}
+
+.slides>div {
+    scroll-snap-align: start;
+    flex-shrink: 0;
+    width: 100%;
+    height: 100%;
+    margin-right: 50px;
+    border-radius: 10px;
+    background: blue;
+    transform-origin: center center;
+    transform: scale(1);
+    transition: transform 0.5s;
+    position: relative;
+    display: flex;
     justify-content: center;
+    align-items: center;
+    font-size: 100px;
 }
 
-.t_col {
-    flex: 33.33%;
-    max-width: 33.33%;
-    box-sizing: border-box;
-    padding: 15px;
+/**/
+.p-slides {
+    display: flex;
+    overflow-x: auto;
+    scroll-snap-type: x mandatory;
+    height: 150px;
+    scroll-behavior: smooth;
+    -webkit-overflow-scrolling: touch;
 }
 
-.testmonial {
-    background: #D9D9D9;
-    padding: 30px;
+.p-slides::-webkit-scrollbar {
+    width: 10px;
+    height: 10px;
 }
 
-.testmonial img {
-    width: 100px;
-    height: 100px;
-    border-radius: 50%;
+.p-slides::-webkit-scrollbar-thumb {
+    background: #000;
+    border-radius: 10px;
 }
 
-.name {
-    font-size: 20px;
-    text-transform: uppercase;
-    margin: 20px 0;
+.p-slides::-webkit-scrollbar-track {
+    background: transparent;
 }
 
-@media screen and(max-width:992px) {
-    .t_col {
-        flex: 100%;
-        max-width: 80%;
+.p-slides>div {
+    scroll-snap-align: start;
+    flex-shrink: 0;
+    width: 100%;
+    height: 100%;
+    margin-right: 50px;
+    border-radius: 10px;
+    background: blue;
+    transform-origin: center center;
+    transform: scale(1);
+    transition: transform 0.5s;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 100px;
+}
+
+@media (max-width:992px) {
+    .row {
+        flex-direction: column;
+    }
+
+    .column5 {
+        width: 100%;
+        flex-direction: row;
+        overflow: hidden;
+    }
+
+    .p-slides {
+        width: 150%;
+        margin: 0;
+        flex-direction: row;
+    }
+
+    .p-details{
+        width: 100%;
+        padding: 5px 10px;
+    }
+
+    .ap-details{
+        margin: 0 15px;
+    }
+
+    .column6 {
+        width: 100%;
     }
 }
-
-@media screen and (max-width: 600px) {
-    .t_col {
-        flex: 100%;
-        max-width: 100%;
-    }
-}
-
 
 @media(max-width: 992px) {
     #reviews .head_line {
