--- a/style.css
+++ b/style.css
@@ -456,7 +456,7 @@ header {
 }
 
 .card-item_dis {
-    padding: 10px;
+    padding: 10px 5px;
     margin: 10px;
     border-radius: 10px;
     background-color: white;
@@ -550,6 +550,7 @@ header {
     overflow-x: auto;
     scroll-snap-type: x mandatory;
     height: 400px;
+    margin: 0 4rem;
     scroll-behavior: smooth;
     -webkit-overflow-scrolling: touch;
 }
@@ -602,7 +603,7 @@ header {
 }
 
 .p-slides::-webkit-scrollbar-thumb {
-    background: #000;
+    background: #d9d9d9;
     border-radius: 10px;
 }
 
