--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Manrope', sans-serif;
+    font-family: 'Hauora Sans', sans-serif;
     ;
 }
 
@@ -466,16 +466,6 @@ header {
     font-size: 13px;
 }
 
-@media screen and (max-width: 600px) {
-    .card-container {
-        flex-wrap: wrap;
-    }
-
-    .s-card {
-        margin: 10px;
-    }
-}
-
 
 @media (max-width: 992px) {
     #sevices {
@@ -491,6 +481,17 @@ header {
     .service_para {
         font-size: 15px;
         font-weight: lighter;
+    }
+    .card-container {
+        flex-wrap: wrap;
+    }
+
+    .s-card {
+        margin: 10px;
+    }
+
+    .s-card svg{
+        display: none;
     }
 }
 
