--- a/style.css
+++ b/style.css
@@ -425,7 +425,7 @@ header {
 
 .service_para {
     font-size: 18px;
-    font-weight: lighter;
+    font-weight: 600;
     color: #133A73;
     margin: 0;
 }
@@ -480,7 +480,7 @@ header {
 
     .service_para {
         font-size: 15px;
-        font-weight: lighter;
+        font-weight: 600;
     }
     .card-container {
         flex-wrap: wrap;
