--- a/style.css
+++ b/style.css
@@ -901,6 +901,12 @@ header {
         font-size: 15px;
         font-weight: 400;
     }
+
+    .bottom_row li{
+        font-size: 15px;
+        font-weight: 400;
+    }
+
     .top_row img {
         width: 80%;
     }
