--- a/style.css
+++ b/style.css
@@ -902,7 +902,7 @@ header {
         font-weight: 400;
     }
 
-    .bottom_row li{
+    .fb_links li{
         font-size: 15px;
         font-weight: 400;
     }
