--- a/style.css
+++ b/style.css
@@ -903,6 +903,8 @@ header {
     }
 
     .fb_links li{
+        text-decoration: none;
+        list-style-type: none;
         font-size: 15px;
         font-weight: 400;
     }
