--- a/style.css
+++ b/style.css
@@ -662,7 +662,7 @@ header {
 
     .p-slides {
         width: 150%;
-        margin: 0;
+        margin-left: 0;
         padding-left: 0;
         flex-direction: row;
     }
