--- a/style.css
+++ b/style.css
@@ -656,13 +656,15 @@ header {
 
     .column5 {
         width: 100%;
+        margin: 0;
+        padding: 0;
         flex-direction: row;
         overflow: hidden;
     }
 
     .p-slides {
         width: 150%;
-        margin-left: 0;
+        margin: 0;
         padding-left: 0;
         flex-direction: row;
     }
