--- a/style.css
+++ b/style.css
@@ -158,6 +158,7 @@ header {
     padding: 0 1%;
     line-height: 100px;
     font-size: 90px;
+    font-weight: 600;
 }
 
 #hero img {
@@ -168,7 +169,7 @@ header {
 @media (max-width: 992px) {
     #hero .head_line {
         font-size: 25px;
-        font-weight: bold;
+        font-weight: 600;
         line-height: 25px;
     }
 
@@ -313,6 +314,7 @@ header {
     color: #133A73;
     padding: 0 1%;
     font-size: 85px;
+    font-weight: 600;
     line-height: 100px;
     text-align: right;
 }
@@ -325,7 +327,7 @@ header {
 @media (max-width: 992px) {
     #m_insurance .head_line {
         font-size: 25px;
-        font-weight: bold;
+        font-weight: 600;
         line-height: 18px;
     }
 
@@ -510,6 +512,7 @@ header {
     padding: 0 5rem;
     color: #133A73;
     font-size: 97px;
+    font-weight: 550;
     line-height: 100px;
     width: 100%;
 }
@@ -704,7 +707,7 @@ header {
         font-size: 28px;
         padding: 0 2rem;
         line-height: 25px;
-        font-weight: bold;
+        font-weight: 550;
     }
 
     #reviews {
@@ -721,6 +724,7 @@ header {
     text-align: center;
     color: #133A73;
     font-size: 80px;
+    font-weight: 600;
     line-height: 100px;
     width: 100%;
 }
@@ -786,7 +790,7 @@ header {
         text-align: left;
         line-height: 25px;
         font-size: 32px;
-        font-weight: bold;
+        font-weight: 600;
         margin-top: 4rem;
     }
 
@@ -867,9 +871,6 @@ header {
 }
 
 .fb_links {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
     background-color: #D9D9D9;
     padding: 2rem;
     width: 61%;
@@ -877,6 +878,14 @@ header {
     font-size: 14px;
     font-weight: 200;
     line-height: 30px;
+}
+
+.fb_links ul{
+    list-style-type: none;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    width: 100%;
 }
 
 .bottom_row {
@@ -926,6 +935,11 @@ header {
         width: 95%;
     }
 
+    .fb_links ul{
+        flex-direction: column;
+        width: 100%;
+    }
+
     .fb_links {
         margin-top: 20px;
         padding: 0 10px;
@@ -935,7 +949,7 @@ header {
 
     .fb_disc,
     .fb_seprator {
-        display: inline;
+        display: block;
     }
 
     .bottom_row {
