--- a/style.css
+++ b/style.css
@@ -20,7 +20,8 @@ header li {
 header a {
     text-decoration: none;
     color: #140001;
-    font-size: 1rem;
+    font-size: 1.1rem;
+    font-weight: 600;
 }
 
 header a:hover {
@@ -45,7 +46,7 @@ header {
 
 .navbar .links {
     display: flex;
-    gap: 2rem;
+    gap: 2.3rem;
 }
 
 .navbar .toggle_btn {
