--- a/style.css
+++ b/style.css
@@ -322,7 +322,7 @@ header {
 
 #m_insurance img {
     width: 65%;
-    padding: 5px 15px 0 15px;
+    padding: 0 15px;
 }
 
 @media (max-width: 992px) {
@@ -340,6 +340,7 @@ header {
     #m_insurance img {
         width: 100%;
         padding: 0 15px;
+        padding: 5px 15px 0 15px;
     }
 }
 
