--- a/style.css
+++ b/style.css
@@ -1,11 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@800&display=swap');
-
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Hauora Sans', sans-serif;
-    ;
+    font-family: Bahnschrift SemiBold;
 }
 
 body {
@@ -38,7 +35,7 @@ header {
     width: 100%;
     height: 60px;
     max-width: 1200px;
-    margin: 0 auto;
+    margin: 1rem auto;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -151,27 +148,30 @@ header {
 
 #hero {
     padding: 0 6%;
-    margin-top: 1rem;
+    margin-top: 3rem;
 }
 
 #hero .head_line {
     color: #133A73;
     padding: 0 1%;
     line-height: 100px;
-    font-size: 90px;
+    font-size: 105px;
+    letter-spacing: -4.2px;
+    margin-bottom: 2.5rem;
     font-weight: 600;
 }
 
 #hero img {
-    height: 95%;
+    height: 96%;
     width: 100%;
 }
 
 @media (max-width: 992px) {
     #hero .head_line {
-        font-size: 25px;
-        font-weight: 600;
-        line-height: 25px;
+        font-size: 30px;
+        /* font-weight:700; */
+        line-height: 30px;
+        letter-spacing: 1px;
     }
 
     .row {
@@ -207,7 +207,7 @@ header {
     justify-content: space-between;
     align-items: center;
     background-color: #E9E6DE;
-    padding: 44px;
+    padding: 45px;
     border-radius: 10px;
 }
 
@@ -257,7 +257,7 @@ header {
 /*contact us*/
 
 .contact_us {
-    margin-top: 20px;
+    margin-top: 1.7rem;
     padding: 30px 30px;
     font-size: 20px;
     font-weight: lighter;
