--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ header a:hover {
 header {
     position: relative;
     padding-top: 0.6rem;
-    padding-bottom: 0.8rem;
+    padding-bottom: 0rem;
 }
 
 .navbar {
@@ -102,6 +102,8 @@ header {
 /*responsive navbar*/
 @media (max-width: 992px) {
     .navbar {
+        margin: 1rem auto;
+        padding-bottom: 1px;
         padding-left: 18px;
         padding-right: 18px;
     }
