--- a/style.css
+++ b/style.css
@@ -235,7 +235,7 @@ header {
 @media (max-width: 992px) {
     .card {
         width: 100%;
-        margin-top: 10px;
+        margin-top: 18px;
         padding: 40px 17px;
         align-items: left;
     }
@@ -308,7 +308,7 @@ header {
     border-radius: 10px;
     cursor: pointer;
     font-size: 16px;
-    box-shadow: 0 8px 10px 0 #133A73;
+    box-shadow: 5px 10px 30px #133A73;
 }
 
 /*m_insurance*/
@@ -321,8 +321,8 @@ header {
     color: #133A73;
     padding: 0 1%;
     font-size: 85px;
-    font-weight: 600;
-    line-height: 100px;
+    font-weight: 900;
+    line-height: 90px;
     text-align: right;
 }
 
